<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">瓜大生活</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="left_drawer_no_login_tip1">登录后，您将能完整</string>
    <string name="left_drawer_no_login_tip2">使用本软件的功能。</string>
    <string name="left_drawer_item_query">查询</string>
    <string name="left_drawer_item_notify">通知</string>
    <string name="left_drawer_item_appinfo">平台简介</string>
    <string name="left_drawer_item_mystatus">我的发表</string>
    <string name="left_drawer_item_mymsg">我的消息</string>
    <string name="left_drawer_item_help">使用帮助</string>
    <string name="left_drawer_item_setting">设置</string>
    <string name="left_drawer_item_feedback">反馈</string>
    <string name="left_drawer_item_shareapp">推荐</string>
    <string name="drawer_right_logout_hint_text">"登录后 可关注好友评论和收藏"</string>
    <string name="drawer_right_tip_no_login">未登录</string>
    <string name="ss_pattern_update">发现%1$d条更新</string>
    <string name="ss_have_a_rest">暂无更新, 休息一会儿</string>
    <string name="action_night_mode">夜间模式</string>
    <string name="action_day_mode">日间模式</string>
    <string name="tip">温馨提示：西工大研究生/博士生初始登录密码为8位生日（如19910101）。</string>
    <string name="adduserinfotip">性别、年龄、家乡数据填写后不可修改。</string>
    <string name="setting_list_mode">列表显示摘要</string>
    <string name="setting_font_size">字体大小</string>
    <string name="setting_list_comment">列表页评论</string>
    <string name="setting_refresh_list">列表页刷新</string>
    <string name="setting_load_image">2G/3G网络流量</string>
    <string name="setting_notify">接收推送通知</string>
    <string name="setting_interactive">互动插件</string>
    <string name="setting_share_when_favor">收藏时转发</string>
    <string name="setting_share_when_diggbury">顶踩时转发</string>
    <string name="setting_clear">清理缓存</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_recommend">推荐给朋友</string>
    <string name="setting_update">检查新版本</string>
    <string name="setting_night_mode">夜间模式</string>
    <string name="setting_shake">摇一摇</string>
    <string name="setting_msg_notification">接收新消息通知</string>
    <string name="setting_msg_sound">声音</string>
    <string name="setting_msg_vibration">震动</string>
    <string name="setting_block_img">无图模式</string>
    <string name="setting_use_swipe">启用返回手势</string>
    <string name="setting_switch_domain">启动网络调试</string>
    <string name="setting_close_shake_hand">关闭摇一摇切换夜间模式</string>
    <string name="setting_use_help">平台简介</string>
    <string name="app_copyright">© 党委研工部|筋斗云</string>
    <string name="favorite_btn_delete">删除</string>
    <string name="favorite_btn_edit">编辑</string>
    <string name="favorite_btn_cancel">取消</string>
    <string name="dislike_dlg_lable_speech">读文章</string>
    <string name="drawer_btn_rss">频道管理</string>
    <string name="subscribe_my_category">我的频道</string>
    <string name="subscribe_more_category">更多频道</string>
    <string name="subscribe_manager_category_info">单击增删频道</string>
    <string name="subscribe_manager_category_info_2">单击增删频道，长按拖拽排序</string>
    <string name="label_cancel_dislike">撤消</string>
    <string name="day_today">今天</string>
    <string name="day_yesterday">昨天</string>
    <string name="day_before">前天</string>
    <string name="search_count_fmt">发现%1$s篇文章</string>
    <string name="pattern_update">发现%1$d条更新</string>
    <string name="city_category_list_header">点击选择其他城市</string>
    <string name="city_category_list_hint">选择城市，立即查看本地新闻</string>
    <string name="city_category_list_notify_no_city">请先选择您关注的城市</string>
    <string name="retry_large_image"><u>加载失败，点击重试</u></string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <!-- 网址 -->
    <string name="updateurl">http://192.168.25.21:8180/update.xml</string>
    <string name="helpurl">http://baidu.com</string>
    <string name="edit_info_commit">提交</string>
    <string name="edit_info_logout">注销登录</string>

    <!-- 选择字号 -->
    <string name="ts_small">小号</string>
    <string name="ts_medium">中号</string>
    <string name="ts_big">大号</string>
    <string name="ts_cancel">取消</string>
    <string name="ts_closed">关闭</string>
    <string name="ts_wifi">连接无线网</string>
    <string name="ts_operation">快捷操作</string>

    <!-- wlan -->
    <string name="loading">正在打开wifi，请稍后...</string>
    <string name="notion">提示：\n	1.点击“上线”按钮后默认登录为收费资源;\n	2.点击记住密码后，可自动重连校园无线网;\n	3.保持App后台运行，不进入App也可以摇一摇连接校园wifi。</string>
    <string name="successtip">您已成功登录到NWPU-WLAN，如需下线，请点击“下线”按钮！</string>
    <string name="save_picture">保存图片</string>
    <string name="save_picture_failed">保存失败</string>
    <string name="save_picture_success">图片成功保存至%s目录</string>

    <!-- 聊天相关 -->
    <string name="kick">断开</string>
    <string name="send">发送</string>
    <string name="menu_settings">Settings</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="title_alert">提示信息</string>
    <!--<string name="ok">确定</string>-->
    <!--<string name="cancel">取消</string>-->
    <string name="header_hint_refresh_normal">Pull to refresh</string>
    <string name="header_hint_refresh_ready">Release to refresh</string>
    <string name="header_hint_refresh_loading">Refreshing&#8230;</string>
    <string name="header_hint_refresh_time">Time：</string>
    <string name="footer_hint_load_normal">Load more</string>
    <string name="footer_hint_load_ready">Release to load more</string>

</resources>