<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/channel_item_background" >

    <com.zyw.nwpu.base.TitleBar
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:id="@+id/rl_main"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/head"
        android:background="@color/activity_bg_color" >

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10.0dip" >

                    <LinearLayout
                        android:id="@+id/block_image"
                        style="@style/setting_item_head"
                        android:visibility="gone" >

                        <TextView
                            style="@style/setting_item_text"
                            android:text="@string/setting_block_img" />

                        <View
                            android:layout_width="0.0dip"
                            android:layout_height="1.0dip"
                            android:layout_weight="1.0" />

                        <CheckBox
                            android:id="@+id/checkbox_block_img"
                            style="@style/setting_checkbox" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/notify"
                        style="@style/setting_item_head"
                        android:visibility="gone" >

                        <TextView
                            android:id="@+id/notify_text"
                            style="@style/setting_item_text"
                            android:text="@string/setting_notify" />

                        <View
                            android:layout_width="0.0dip"
                            android:layout_height="1.0dip"
                            android:layout_weight="1.0" />

                        <CheckBox
                            android:id="@+id/checkbox_notify"
                            style="@style/setting_checkbox" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/use_swipe"
                        style="@style/setting_item_center"
                        android:visibility="gone" >

                        <TextView
                            android:id="@+id/use_swip_text"
                            style="@style/setting_item_text"
                            android:text="@string/setting_use_swipe" />

                        <View
                            android:layout_width="0.0dip"
                            android:layout_height="1.0dip"
                            android:layout_weight="1.0" />

                        <CheckBox
                            android:id="@+id/checkbox_use_swipe"
                            style="@style/setting_checkbox" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/setting_shake"
                        style="@style/setting_item_center"
                        android:layout_marginTop="15.0dip"
                        android:visibility="gone" >

                        <TextView
                            style="@style/setting_item_text"
                            android:text="@string/setting_shake" />

                        <View
                            android:layout_width="0.0dip"
                            android:layout_height="1.0dip"
                            android:layout_weight="1.0" />

                        <TextView
                            android:id="@+id/tv_shake"
                            style="@style/setting_alt_text"
                            android:text="连接无线网" />

                        <ImageView style="@style/setting_arrow" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/setting_msgnotification"
                        style="@style/setting_item_center"
                        android:layout_marginTop="15.0dip" >

                        <TextView
                            style="@style/setting_item_text"
                            android:text="@string/setting_msg_notification" />

                        <View
                            android:layout_width="0.0dip"
                            android:layout_height="1.0dip"
                            android:layout_weight="1.0" />

                        <CheckBox
                            android:id="@+id/checkbox_msg_notification"
                            style="@style/setting_checkbox"
                            android:checked="true" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/setting_msg_sound"
                        style="@style/setting_item_center"
                        android:visibility="gone" >

                        <TextView
                            style="@style/setting_item_text"
                            android:text="@string/setting_msg_sound" />

                        <View
                            android:layout_width="0.0dip"
                            android:layout_height="1.0dip"
                            android:layout_weight="1.0" />

                        <CheckBox
                            android:id="@+id/checkbox_msg_sound"
                            style="@style/setting_checkbox"
                            android:checked="true" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/setting_msg_vibration"
                        style="@style/setting_item_center"
                        android:visibility="gone" >

                        <TextView
                            style="@style/setting_item_text"
                            android:text="@string/setting_msg_vibration" />

                        <View
                            android:layout_width="0.0dip"
                            android:layout_height="1.0dip"
                            android:layout_weight="1.0" />

                        <CheckBox
                            android:id="@+id/checkbox_msg_vibration"
                            style="@style/setting_checkbox"
                            android:checked="true" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/setting_font_size"
                        style="@style/setting_item_center"
                        android:layout_marginBottom="15.0dip"
                        android:layout_marginTop="15.0dip" >

                        <TextView
                            style="@style/setting_item_text"
                            android:text="@string/setting_font_size" />

                        <View
                            android:layout_width="0.0dip"
                            android:layout_height="1.0dip"
                            android:layout_weight="1.0" />

                        <TextView
                            android:id="@+id/font_size"
                            style="@style/setting_alt_text"
                            android:text="中" />

                        <ImageView
                            android:id="@+id/font_size_arrow"
                            style="@style/setting_arrow" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/update"
                        style="@style/setting_item_center" >

                        <TextView
                            style="@style/setting_item_text"
                            android:text="@string/setting_update" />

                        <ImageView
                            android:id="@+id/version_new"
                            style="@style/setting_hint_new"
                            android:visibility="visible" />

                        <View
                            android:layout_width="0.0dip"
                            android:layout_height="1.0dip"
                            android:layout_weight="1.0" />

                        <TextView
                            android:id="@+id/current_version"
                            style="@style/setting_alt_text"
                            android:text="v 1.0" />

                        <ImageView style="@style/setting_arrow" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/recommendation"
                        style="@style/setting_item_head"
                        android:visibility="visible" >

                        <TextView
                            android:id="@+id/recommendation_text"
                            style="@style/setting_item_text"
                            android:text="@string/setting_recommend" />

                        <View
                            android:layout_width="0.0dip"
                            android:layout_height="1.0dip"
                            android:layout_weight="1.0" />

                        <ImageView
                            android:id="@+id/recommendation_arrow"
                            style="@style/setting_arrow" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/use_help"
                        style="@style/setting_item_end" >

                        <TextView
                            android:id="@+id/use_help_text"
                            style="@style/setting_item_text"
                            android:text="@string/setting_use_help" />

                        <View
                            android:layout_width="0.0dip"
                            android:layout_height="1.0dip"
                            android:layout_weight="1.0" />

                        <ImageView
                            android:id="@+id/use_help_arrow"
                            style="@style/setting_arrow" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_feedback"
                        style="@style/setting_item_end"
                        android:layout_marginTop="15.0dip"
                        android:visibility="visible" >

                        <TextView
                            style="@style/setting_item_text"
                            android:text="@string/setting_feedback" />

                        <View
                            android:layout_width="0.0dip"
                            android:layout_height="1.0dip"
                            android:layout_weight="1.0" />

                        <TextView
                            style="@style/setting_alt_text"
                            android:singleLine="true" />

                        <ImageView style="@style/setting_arrow" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_logout"
                        style="@style/setting_item_end"
                        android:layout_marginTop="15.0dip"
                        android:visibility="visible" >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/edit_info_logout"
                            android:textColor="@color/red"
                            android:textSize="17sp" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/copyright"
                    style="@style/setting_copyright"
                    android:visibility="gone" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</RelativeLayout>